[package]
name = "buy-bucks"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
reqwest = { version = "0.12.7", features = ["blocking"] }
scraper = "0.20.0"
serde = "1.0.210"
serde_json = "1.0.128"
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }